Changed the style of sign-in buttons

--- a/assets/stylesheets/tweetbook.css
+++ b/assets/stylesheets/tweetbook.css
@@ -1,10 +1,3 @@
+body.controller-account.action-login #content { text-align: center; padding-top: 4em; }
 
-/******** top right user picture **********************/
-
-.tweetbook_image { padding: 2px; padding-right: 4px; vertical-align: top; }
-
-/**********************************************************************/
-/* ICONS
-/**********************************************************************/
-
-#admin-menu a.tweetbook { background-image: url(../images/tweetbook1_icon.png)}
+#login-form table { margin-top: 1em; }
