--- a/app/views/shared/_tweetbook.html.erb
+++ b/app/views/shared/_tweetbook.html.erb
@@ -1,25 +1,13 @@
-<script type="text/javascript">
-$(document).ready(function(){
-
-<% twitter_keys_present  = !$tweetbook_settings['twitter']['key'].blank? && !$tweetbook_settings['twitter']['secret'].blank? ? true : false
-   facebook_keys_present = !$tweetbook_settings['facebook']['key'].blank? && !$tweetbook_settings['facebook']['secret'].blank? ? true : false
-   github_keys_present   = !$tweetbook_settings['github']['key'].blank? && !$tweetbook_settings['github']['secret'].blank? ? true : false   
-%>
-var twitter_Btn = '', facebook_Btn = '', github_Btn = '';
-<% if twitter_keys_present %>
-   var twitter_Btn = '<%= link_to image_tag("twitterBtn.jpg", :plugin => "redmine_tweetbook"), "/auth/twitter" %>';
-<% end %>
-<% if facebook_keys_present %>
-   var facebook_Btn = '<%= link_to image_tag("facebookBtn.jpg", :plugin => "redmine_tweetbook"), "/auth/facebook" %>';
-<% end %>
-<% if github_keys_present %>
-   var github_Btn = '<%= link_to image_tag("githubBtn.jpg", :plugin => "redmine_tweetbook"), "/auth/github" %>';
+<% content_for(:header_tags) do %>
+  <%= stylesheet_link_tag(:tweetbook, :plugin => 'redmine_tweetbook') %>
 <% end %>
 
-<% if twitter_keys_present || facebook_keys_present || github_keys_present %>
-   $('#login-form table tbody tr:first').before('<tr><td colspan=2>'+ twitter_Btn +'&nbsp;&nbsp;&nbsp;&nbsp;'+ facebook_Btn +'&nbsp;&nbsp;&nbsp;&nbsp;'+ github_Btn +'</td></tr>');
+<% unless $tweetbook_settings['twitter']['key'].blank? || $tweetbook_settings['twitter']['secret'].blank? %>
+  <%= link_to image_tag("twitterBtn.png", :plugin => "redmine_tweetbook"), "/auth/twitter", :class => "signin-button" %>
 <% end %>
-
-});
-
-</script>
+<% unless $tweetbook_settings['facebook']['key'].blank? || $tweetbook_settings['facebook']['secret'].blank? %>
+  <%= link_to image_tag("facebookBtn.png", :plugin => "redmine_tweetbook"), "/auth/facebook", :class => "signin-button" %>
+<% end %>
+<% unless $tweetbook_settings['github']['key'].blank? || $tweetbook_settings['github']['secret'].blank? %>
+  <%= link_to image_tag("githubBtn.jpg", :plugin => "redmine_tweetbook"), "/auth/github", :class => "signin-button" %>
+<% end %>
